; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_core/extr_mlx5_fs_tree.c_fs_init_namespace.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_core/extr_mlx5_fs_tree.c_fs_init_namespace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_flow_namespace = type { i32, i32, i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@FS_TYPE_NAMESPACE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.mlx5_flow_namespace* (%struct.mlx5_flow_namespace*)* @fs_init_namespace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.mlx5_flow_namespace* @fs_init_namespace(%struct.mlx5_flow_namespace* %0) #0 {
  %2 = alloca %struct.mlx5_flow_namespace*, align 8
  store %struct.mlx5_flow_namespace* %0, %struct.mlx5_flow_namespace** %2, align 8
  %3 = load i32, i32* @FS_TYPE_NAMESPACE, align 4
  %4 = load %struct.mlx5_flow_namespace*, %struct.mlx5_flow_namespace** %2, align 8
  %5 = getelementptr inbounds %struct.mlx5_flow_namespace, %struct.mlx5_flow_namespace* %4, i32 0, i32 4
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  store i32 %3, i32* %6, align 4
  %7 = load %struct.mlx5_flow_namespace*, %struct.mlx5_flow_namespace** %2, align 8
  %8 = getelementptr inbounds %struct.mlx5_flow_namespace, %struct.mlx5_flow_namespace* %7, i32 0, i32 3
  %9 = call i32 @init_rwsem(i32* %8)
  %10 = load %struct.mlx5_flow_namespace*, %struct.mlx5_flow_namespace** %2, align 8
  %11 = getelementptr inbounds %struct.mlx5_flow_namespace, %struct.mlx5_flow_namespace* %10, i32 0, i32 2
  %12 = call i32 @init_rwsem(i32* %11)
  %13 = load %struct.mlx5_flow_namespace*, %struct.mlx5_flow_namespace** %2, align 8
  %14 = getelementptr inbounds %struct.mlx5_flow_namespace, %struct.mlx5_flow_namespace* %13, i32 0, i32 1
  %15 = call i32 @INIT_LIST_HEAD(i32* %14)
  %16 = load %struct.mlx5_flow_namespace*, %struct.mlx5_flow_namespace** %2, align 8
  %17 = getelementptr inbounds %struct.mlx5_flow_namespace, %struct.mlx5_flow_namespace* %16, i32 0, i32 0
  %18 = call i32 @INIT_LIST_HEAD(i32* %17)
  %19 = load %struct.mlx5_flow_namespace*, %struct.mlx5_flow_namespace** %2, align 8
  ret %struct.mlx5_flow_namespace* %19
}

declare dso_local i32 @init_rwsem(i32*) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
